pkg_check_modules(PYTHON python3)

option(WITH_TOOLS "Tools made with pyquid" ${PYTHON_FOUND})
add_feature_info("Tools" WITH_TOOLS "Tools based on pyquid")

if (WITH_TOOLS)
  install(DIRECTORY . DESTINATION bin
    COMPONENT lib
    FILES_MATCHING PATTERN "swquid*"
    PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
    GROUP_EXECUTE GROUP_READ
    WORLD_EXECUTE WORLD_READ)

    install(DIRECTORY . DESTINATION bin
    COMPONENT dev
    FILES_MATCHING PATTERN "swquid*"
    PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
    GROUP_EXECUTE GROUP_READ
    WORLD_EXECUTE WORLD_READ)

    install(DIRECTORY . DESTINATION bin
    COMPONENT dbg
    FILES_MATCHING PATTERN "swquid*"
    PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
    GROUP_EXECUTE GROUP_READ
    WORLD_EXECUTE WORLD_READ)


endif ()
